// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`display pre selected shipping method as selected option on page load 1`] = `
<ShippingMethods
  cart={
    Object {
      "lineItems": Array [],
    }
  }
  checkout={Object {}}
  setShippingMethod={[Function]}
  state={
    Object {
      "selectedShippingMethod": Object {
        "cost": 3.45,
        "delivery_date": "Monday 3rd December",
        "id": "1",
        "title": "Super Saver",
        "value": "super_saver",
      },
      "shippingMethods": Array [
        Object {
          "cost": 3.45,
          "delivery_date": "Monday 3rd December",
          "id": "1",
          "title": "Super Saver",
          "value": "super_saver",
        },
        Object {
          "cost": 5.45,
          "delivery_date": "Sunday 2nd December",
          "id": "2",
          "title": "UPS Next Day",
          "value": "ups_next_day",
        },
        Object {
          "cost": 8.45,
          "delivery_date": "Sunday 2nd December",
          "id": "3",
          "title": "UPS Next Day Before Noon",
          "value": "ups_next_day_before_noon",
        },
        Object {
          "cost": 10.45,
          "delivery_date": "Today",
          "id": "4",
          "title": "UPS Same Day",
          "value": "ups_same_day",
        },
      ],
    }
  }
>
  <div
    aria-label="Shipping Methods"
    className="o-form"
  >
    <h3>
      Your Shipping Method
    </h3>
    <form
      className="o-form__wrapper c-shipping-method-list"
    >
      <p>
        📍 Shipping from ...
        <span
          className="c-shipping-method-list__item-count"
        >
          0 items
        </span>
      </p>
      <div
        aria-label="super_saver"
        className="o-form__input-group c-shipping-method-list__input-group"
        onClick={[Function]}
      >
        <input
          checked={true}
          id="1"
          name="shipping_method"
          onChange={[Function]}
          type="radio"
          value="super_saver"
        />
        <label
          htmlFor="super_saver"
        >
          <span
            className="c-shipping-method-list__cost"
          >
            £
            3.45
          </span>
          <span
            className="c-shipping-method-list__title"
          >
            Super Saver
          </span>
          <span
            className="c-shipping-method-list__delivery-date-label"
          >
            Estimated Delivery: 
          </span>
          <span
            className="c-shipping-method-list__delivery-date"
          >
            Monday 3rd December
          </span>
        </label>
      </div>
      <div
        aria-label="ups_next_day"
        className="o-form__input-group c-shipping-method-list__input-group"
        onClick={[Function]}
      >
        <input
          checked={false}
          id="2"
          name="shipping_method"
          onChange={[Function]}
          type="radio"
          value="ups_next_day"
        />
        <label
          htmlFor="ups_next_day"
        >
          <span
            className="c-shipping-method-list__cost"
          >
            £
            5.45
          </span>
          <span
            className="c-shipping-method-list__title"
          >
            UPS Next Day
          </span>
          <span
            className="c-shipping-method-list__delivery-date-label"
          >
            Estimated Delivery: 
          </span>
          <span
            className="c-shipping-method-list__delivery-date"
          >
            Sunday 2nd December
          </span>
        </label>
      </div>
      <div
        aria-label="ups_next_day_before_noon"
        className="o-form__input-group c-shipping-method-list__input-group"
        onClick={[Function]}
      >
        <input
          checked={false}
          id="3"
          name="shipping_method"
          onChange={[Function]}
          type="radio"
          value="ups_next_day_before_noon"
        />
        <label
          htmlFor="ups_next_day_before_noon"
        >
          <span
            className="c-shipping-method-list__cost"
          >
            £
            8.45
          </span>
          <span
            className="c-shipping-method-list__title"
          >
            UPS Next Day Before Noon
          </span>
          <span
            className="c-shipping-method-list__delivery-date-label"
          >
            Estimated Delivery: 
          </span>
          <span
            className="c-shipping-method-list__delivery-date"
          >
            Sunday 2nd December
          </span>
        </label>
      </div>
      <div
        aria-label="ups_same_day"
        className="o-form__input-group c-shipping-method-list__input-group"
        onClick={[Function]}
      >
        <input
          checked={false}
          id="4"
          name="shipping_method"
          onChange={[Function]}
          type="radio"
          value="ups_same_day"
        />
        <label
          htmlFor="ups_same_day"
        >
          <span
            className="c-shipping-method-list__cost"
          >
            £
            10.45
          </span>
          <span
            className="c-shipping-method-list__title"
          >
            UPS Same Day
          </span>
          <span
            className="c-shipping-method-list__delivery-date-label"
          >
            Estimated Delivery: 
          </span>
          <span
            className="c-shipping-method-list__delivery-date"
          >
            Today
          </span>
        </label>
      </div>
      <button
        type="submit"
      >
        Continue to Payment
      </button>
    </form>
  </div>
</ShippingMethods>
`;

exports[`render shipping methods as expected 1`] = `
<ShippingMethods
  cart={
    Object {
      "lineItems": Array [
        Object {
          "id": "1",
        },
      ],
    }
  }
  checkout={Object {}}
  setShippingMethod={[Function]}
  state={
    Object {
      "shippingMethods": Array [
        Object {
          "cost": 3.45,
          "delivery_date": "Monday 3rd December",
          "id": "1",
          "title": "Super Saver",
          "value": "super_saver",
        },
        Object {
          "cost": 5.45,
          "delivery_date": "Sunday 2nd December",
          "id": "2",
          "title": "UPS Next Day",
          "value": "ups_next_day",
        },
        Object {
          "cost": 8.45,
          "delivery_date": "Sunday 2nd December",
          "id": "3",
          "title": "UPS Next Day Before Noon",
          "value": "ups_next_day_before_noon",
        },
        Object {
          "cost": 10.45,
          "delivery_date": "Today",
          "id": "4",
          "title": "UPS Same Day",
          "value": "ups_same_day",
        },
      ],
    }
  }
>
  <div
    aria-label="Shipping Methods"
    className="o-form"
  >
    <h3>
      Your Shipping Method
    </h3>
    <form
      className="o-form__wrapper c-shipping-method-list"
    >
      <p>
        📍 Shipping from ...
        <span
          className="c-shipping-method-list__item-count"
        >
          1 item
        </span>
      </p>
      <div
        aria-label="super_saver"
        className="o-form__input-group c-shipping-method-list__input-group"
        onClick={[Function]}
      >
        <input
          checked={true}
          id="1"
          name="shipping_method"
          onChange={[Function]}
          type="radio"
          value="super_saver"
        />
        <label
          htmlFor="super_saver"
        >
          <span
            className="c-shipping-method-list__cost"
          >
            £
            3.45
          </span>
          <span
            className="c-shipping-method-list__title"
          >
            Super Saver
          </span>
          <span
            className="c-shipping-method-list__delivery-date-label"
          >
            Estimated Delivery: 
          </span>
          <span
            className="c-shipping-method-list__delivery-date"
          >
            Monday 3rd December
          </span>
        </label>
      </div>
      <div
        aria-label="ups_next_day"
        className="o-form__input-group c-shipping-method-list__input-group"
        onClick={[Function]}
      >
        <input
          checked={false}
          id="2"
          name="shipping_method"
          onChange={[Function]}
          type="radio"
          value="ups_next_day"
        />
        <label
          htmlFor="ups_next_day"
        >
          <span
            className="c-shipping-method-list__cost"
          >
            £
            5.45
          </span>
          <span
            className="c-shipping-method-list__title"
          >
            UPS Next Day
          </span>
          <span
            className="c-shipping-method-list__delivery-date-label"
          >
            Estimated Delivery: 
          </span>
          <span
            className="c-shipping-method-list__delivery-date"
          >
            Sunday 2nd December
          </span>
        </label>
      </div>
      <div
        aria-label="ups_next_day_before_noon"
        className="o-form__input-group c-shipping-method-list__input-group"
        onClick={[Function]}
      >
        <input
          checked={false}
          id="3"
          name="shipping_method"
          onChange={[Function]}
          type="radio"
          value="ups_next_day_before_noon"
        />
        <label
          htmlFor="ups_next_day_before_noon"
        >
          <span
            className="c-shipping-method-list__cost"
          >
            £
            8.45
          </span>
          <span
            className="c-shipping-method-list__title"
          >
            UPS Next Day Before Noon
          </span>
          <span
            className="c-shipping-method-list__delivery-date-label"
          >
            Estimated Delivery: 
          </span>
          <span
            className="c-shipping-method-list__delivery-date"
          >
            Sunday 2nd December
          </span>
        </label>
      </div>
      <div
        aria-label="ups_same_day"
        className="o-form__input-group c-shipping-method-list__input-group"
        onClick={[Function]}
      >
        <input
          checked={false}
          id="4"
          name="shipping_method"
          onChange={[Function]}
          type="radio"
          value="ups_same_day"
        />
        <label
          htmlFor="ups_same_day"
        >
          <span
            className="c-shipping-method-list__cost"
          >
            £
            10.45
          </span>
          <span
            className="c-shipping-method-list__title"
          >
            UPS Same Day
          </span>
          <span
            className="c-shipping-method-list__delivery-date-label"
          >
            Estimated Delivery: 
          </span>
          <span
            className="c-shipping-method-list__delivery-date"
          >
            Today
          </span>
        </label>
      </div>
      <button
        type="submit"
      >
        Continue to Payment
      </button>
    </form>
  </div>
</ShippingMethods>
`;

exports[`renders line item quantity as expected 1`] = `
<ShippingMethods
  cart={
    Object {
      "lineItems": Array [],
    }
  }
  checkout={Object {}}
  setShippingMethod={[Function]}
  state={
    Object {
      "shippingMethods": Array [
        Object {
          "cost": 3.45,
          "delivery_date": "Monday 3rd December",
          "id": "1",
          "title": "Super Saver",
          "value": "super_saver",
        },
        Object {
          "cost": 5.45,
          "delivery_date": "Sunday 2nd December",
          "id": "2",
          "title": "UPS Next Day",
          "value": "ups_next_day",
        },
        Object {
          "cost": 8.45,
          "delivery_date": "Sunday 2nd December",
          "id": "3",
          "title": "UPS Next Day Before Noon",
          "value": "ups_next_day_before_noon",
        },
        Object {
          "cost": 10.45,
          "delivery_date": "Today",
          "id": "4",
          "title": "UPS Same Day",
          "value": "ups_same_day",
        },
      ],
    }
  }
>
  <div
    aria-label="Shipping Methods"
    className="o-form"
  >
    <h3>
      Your Shipping Method
    </h3>
    <form
      className="o-form__wrapper c-shipping-method-list"
    >
      <p>
        📍 Shipping from ...
        <span
          className="c-shipping-method-list__item-count"
        >
          0 items
        </span>
      </p>
      <div
        aria-label="super_saver"
        className="o-form__input-group c-shipping-method-list__input-group"
        onClick={[Function]}
      >
        <input
          checked={true}
          id="1"
          name="shipping_method"
          onChange={[Function]}
          type="radio"
          value="super_saver"
        />
        <label
          htmlFor="super_saver"
        >
          <span
            className="c-shipping-method-list__cost"
          >
            £
            3.45
          </span>
          <span
            className="c-shipping-method-list__title"
          >
            Super Saver
          </span>
          <span
            className="c-shipping-method-list__delivery-date-label"
          >
            Estimated Delivery: 
          </span>
          <span
            className="c-shipping-method-list__delivery-date"
          >
            Monday 3rd December
          </span>
        </label>
      </div>
      <div
        aria-label="ups_next_day"
        className="o-form__input-group c-shipping-method-list__input-group"
        onClick={[Function]}
      >
        <input
          checked={false}
          id="2"
          name="shipping_method"
          onChange={[Function]}
          type="radio"
          value="ups_next_day"
        />
        <label
          htmlFor="ups_next_day"
        >
          <span
            className="c-shipping-method-list__cost"
          >
            £
            5.45
          </span>
          <span
            className="c-shipping-method-list__title"
          >
            UPS Next Day
          </span>
          <span
            className="c-shipping-method-list__delivery-date-label"
          >
            Estimated Delivery: 
          </span>
          <span
            className="c-shipping-method-list__delivery-date"
          >
            Sunday 2nd December
          </span>
        </label>
      </div>
      <div
        aria-label="ups_next_day_before_noon"
        className="o-form__input-group c-shipping-method-list__input-group"
        onClick={[Function]}
      >
        <input
          checked={false}
          id="3"
          name="shipping_method"
          onChange={[Function]}
          type="radio"
          value="ups_next_day_before_noon"
        />
        <label
          htmlFor="ups_next_day_before_noon"
        >
          <span
            className="c-shipping-method-list__cost"
          >
            £
            8.45
          </span>
          <span
            className="c-shipping-method-list__title"
          >
            UPS Next Day Before Noon
          </span>
          <span
            className="c-shipping-method-list__delivery-date-label"
          >
            Estimated Delivery: 
          </span>
          <span
            className="c-shipping-method-list__delivery-date"
          >
            Sunday 2nd December
          </span>
        </label>
      </div>
      <div
        aria-label="ups_same_day"
        className="o-form__input-group c-shipping-method-list__input-group"
        onClick={[Function]}
      >
        <input
          checked={false}
          id="4"
          name="shipping_method"
          onChange={[Function]}
          type="radio"
          value="ups_same_day"
        />
        <label
          htmlFor="ups_same_day"
        >
          <span
            className="c-shipping-method-list__cost"
          >
            £
            10.45
          </span>
          <span
            className="c-shipping-method-list__title"
          >
            UPS Same Day
          </span>
          <span
            className="c-shipping-method-list__delivery-date-label"
          >
            Estimated Delivery: 
          </span>
          <span
            className="c-shipping-method-list__delivery-date"
          >
            Today
          </span>
        </label>
      </div>
      <button
        type="submit"
      >
        Continue to Payment
      </button>
    </form>
  </div>
</ShippingMethods>
`;

exports[`should be able to select a shipping method 1`] = `
<ShippingMethods
  cart={
    Object {
      "lineItems": Array [],
    }
  }
  checkout={Object {}}
  setShippingMethod={[Function]}
  state={
    Object {
      "selectedShippingMethod": "",
      "shippingMethods": Array [
        Object {
          "cost": 3.45,
          "delivery_date": "Monday 3rd December",
          "id": "1",
          "title": "Super Saver",
          "value": "super_saver",
        },
        Object {
          "cost": 5.45,
          "delivery_date": "Sunday 2nd December",
          "id": "2",
          "title": "UPS Next Day",
          "value": "ups_next_day",
        },
        Object {
          "cost": 8.45,
          "delivery_date": "Sunday 2nd December",
          "id": "3",
          "title": "UPS Next Day Before Noon",
          "value": "ups_next_day_before_noon",
        },
        Object {
          "cost": 10.45,
          "delivery_date": "Today",
          "id": "4",
          "title": "UPS Same Day",
          "value": "ups_same_day",
        },
      ],
    }
  }
>
  <div
    aria-label="Shipping Methods"
    className="o-form"
  >
    <h3>
      Your Shipping Method
    </h3>
    <form
      className="o-form__wrapper c-shipping-method-list"
    >
      <p>
        📍 Shipping from ...
        <span
          className="c-shipping-method-list__item-count"
        >
          0 items
        </span>
      </p>
      <div
        aria-label="super_saver"
        className="o-form__input-group c-shipping-method-list__input-group"
        onClick={[Function]}
      >
        <input
          checked={true}
          id="1"
          name="shipping_method"
          onChange={[Function]}
          type="radio"
          value="super_saver"
        />
        <label
          htmlFor="super_saver"
        >
          <span
            className="c-shipping-method-list__cost"
          >
            £
            3.45
          </span>
          <span
            className="c-shipping-method-list__title"
          >
            Super Saver
          </span>
          <span
            className="c-shipping-method-list__delivery-date-label"
          >
            Estimated Delivery: 
          </span>
          <span
            className="c-shipping-method-list__delivery-date"
          >
            Monday 3rd December
          </span>
        </label>
      </div>
      <div
        aria-label="ups_next_day"
        className="o-form__input-group c-shipping-method-list__input-group"
        onClick={[Function]}
      >
        <input
          checked={false}
          id="2"
          name="shipping_method"
          onChange={[Function]}
          type="radio"
          value="ups_next_day"
        />
        <label
          htmlFor="ups_next_day"
        >
          <span
            className="c-shipping-method-list__cost"
          >
            £
            5.45
          </span>
          <span
            className="c-shipping-method-list__title"
          >
            UPS Next Day
          </span>
          <span
            className="c-shipping-method-list__delivery-date-label"
          >
            Estimated Delivery: 
          </span>
          <span
            className="c-shipping-method-list__delivery-date"
          >
            Sunday 2nd December
          </span>
        </label>
      </div>
      <div
        aria-label="ups_next_day_before_noon"
        className="o-form__input-group c-shipping-method-list__input-group"
        onClick={[Function]}
      >
        <input
          checked={false}
          id="3"
          name="shipping_method"
          onChange={[Function]}
          type="radio"
          value="ups_next_day_before_noon"
        />
        <label
          htmlFor="ups_next_day_before_noon"
        >
          <span
            className="c-shipping-method-list__cost"
          >
            £
            8.45
          </span>
          <span
            className="c-shipping-method-list__title"
          >
            UPS Next Day Before Noon
          </span>
          <span
            className="c-shipping-method-list__delivery-date-label"
          >
            Estimated Delivery: 
          </span>
          <span
            className="c-shipping-method-list__delivery-date"
          >
            Sunday 2nd December
          </span>
        </label>
      </div>
      <div
        aria-label="ups_same_day"
        className="o-form__input-group c-shipping-method-list__input-group"
        onClick={[Function]}
      >
        <input
          checked={false}
          id="4"
          name="shipping_method"
          onChange={[Function]}
          type="radio"
          value="ups_same_day"
        />
        <label
          htmlFor="ups_same_day"
        >
          <span
            className="c-shipping-method-list__cost"
          >
            £
            10.45
          </span>
          <span
            className="c-shipping-method-list__title"
          >
            UPS Same Day
          </span>
          <span
            className="c-shipping-method-list__delivery-date-label"
          >
            Estimated Delivery: 
          </span>
          <span
            className="c-shipping-method-list__delivery-date"
          >
            Today
          </span>
        </label>
      </div>
      <button
        type="submit"
      >
        Continue to Payment
      </button>
    </form>
  </div>
</ShippingMethods>
`;
